--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -10,11 +10,60 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                {{ products }}
-            </div>
+<div class="container" style="margin-top: 5%;">
+    <div class="row">
+        {% for product in products %}
+         <div class="col-lg-3">
+             <div class="card h-100 bg-light">
+                <div class="card-body">
+                    <img class=" img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                </div>
+                {% if product.rating %}
+                <h6 class="text-center"><i class="fas fa-star" style="font-size: small;"></i>{{ product.rating }}</h6>
+                {% endif %}
+                <h6 class="text-center">{{ product.name }}</h6>
+                <h6 class="text-center">{{ product.price }} $</h6>
+
+             </div>
         </div>
+        {% endfor %}
     </div>
+</div>
+
+<nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+      {% if products.has_previous %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ products.previous_page_number }}">Previous</a>
+        </li>
+      {% else %}
+        <li class="page-item disabled">
+          <a class="page-link" href="#" tabindex="-1" aria-disabled="True">Previous</a>
+        </li>
+      {% endif %}
+      {% for i in products.paginator.page_range %}
+        {% if products.number == i %}
+          <li class="page-item active" aria-current="page">
+            <span class="page-link">
+              {{ i }}
+              <span class="sr-only">(current)</span>
+            </span>
+          </li>
+        {% else %}
+          <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+        {% endif %}
+      {% endfor %}
+      {% if products.has_next %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ products.next_page_number }}">Next</a>
+        </li>
+      {% else %}
+        <li class="page-item disabled">
+          <a class="page-link" href="#" tabindex="-1" aria-disabled="True">Next</a>
+        </li>
+      {% endif %}
+    </ul>
+  </nav>
+
+
 {% endblock %}
