Solved problem with pagination

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -38,7 +38,7 @@
     <ul class="pagination justify-content-center">
       {% if products.has_previous %}
         <li class="page-item">
-          <a class="page-link" href="?page={{ products.previous_page_number }}">Previous</a>
+          <a class="page-link" href="?{{ products.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">Previous</a>
         </li>
       {% else %}
         <li class="page-item disabled">
@@ -54,12 +54,12 @@
             </span>
           </li>
         {% else %}
-          <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+          <li class="page-item"><a class="page-link" href="?page={{ i }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">{{ i }}</a></li>
         {% endif %}
       {% endfor %}
       {% if products.has_next %}
         <li class="page-item">
-          <a class="page-link" href="?page={{ products.next_page_number }}">Next</a>
+          <a class="page-link" href="?page={{ products.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">Next</a>
         </li>
       {% else %}
         <li class="page-item disabled">
