--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -43,8 +43,8 @@
             </ul>
           </li>
         </ul>
-        <form class="d-flex ms-auto">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <form method="GET" action="{% url 'products' %}" class="d-flex ms-auto ">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
