--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -11,63 +11,97 @@
 
 {% block content %}
 <div class="container" style="margin-top: 5%;">
+  <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+    <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
+    <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
+    <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
+    <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating (low to high)</option>
+    <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating (high to low)</option>
+</select>
     <div class="row">
         {% for product in products %}
          <div class="col-lg-3">
-             <div class="card h-100 bg-light">
-              <a href="{% url 'product_id' product.id %}">
-                <div class="card-body">
-                    <img class=" img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+             <div class="card allproducts">
+                <a href="{% url 'product_id' product.id %}">
+                  <div class="card-body">
+                      <img class=" card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}">
+                  </div>
+                </a>
+                <div class="card-content">
+                  {% if product.rating %}
+                  <h6 class="text-center"><i style="color:yellow;"  class="fa fa-star" style="font-size: small;"></i>{{ product.rating }}</h6>
+                  {% else %}
+                  <h6 class="text-center"><i style="color:yellow;"  class="fa fa-star" style="font-size: small;"></i>No rating</h6>
+                  {% endif %}
+                  <h6 class="text-center">{{ product.name }}</h6>
+                  <h6 class="text-center">{{ product.price }} $</h6>
                 </div>
-              </a>
-                {% if product.rating %}
-                <h6 class="text-center"><i class="fa fa-star" style="font-size: small;"></i>{{ product.rating }}</h6>
-                {% else %}
-                <h6 class="text-center"><i class="fa fa-star" style="font-size: small;"></i>No rating</h6>
-                {% endif %}
-                <h6 class="text-center">{{ product.name }}</h6>
-                <h6 class="text-center">{{ product.price }} $</h6>
-
              </div>
         </div>
         {% endfor %}
     </div>
-</div>
 
-<nav aria-label="Page navigation">
-    <ul class="pagination justify-content-center">
-      {% if products.has_previous %}
-        <li class="page-item">
-          <a class="page-link" href="?{{ products.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">Previous</a>
-        </li>
-      {% else %}
-        <li class="page-item disabled">
-          <a class="page-link" href="#" tabindex="-1" aria-disabled="True">Previous</a>
-        </li>
-      {% endif %}
-      {% for i in products.paginator.page_range %}
-        {% if products.number == i %}
-          <li class="page-item active" aria-current="page">
-            <span class="page-link">
-              {{ i }}
-              <span class="sr-only">(current)</span>
-            </span>
+    <nav style="margin-top: 5%;" aria-label="Page navigation">
+      <ul class="pagination justify-content-center">
+        {% if products.has_previous %}
+          <li class="page-item">
+            <a class="page-link" href="?{{ products.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">Previous</a>
           </li>
         {% else %}
-          <li class="page-item"><a class="page-link" href="?page={{ i }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">{{ i }}</a></li>
+          <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1" aria-disabled="True">Previous</a>
+          </li>
         {% endif %}
-      {% endfor %}
-      {% if products.has_next %}
-        <li class="page-item">
-          <a class="page-link" href="?page={{ products.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">Next</a>
-        </li>
-      {% else %}
-        <li class="page-item disabled">
-          <a class="page-link" href="#" tabindex="-1" aria-disabled="True">Next</a>
-        </li>
-      {% endif %}
-    </ul>
-  </nav>
+        {% for i in products.paginator.page_range %}
+          {% if products.number == i %}
+            <li class="page-item active" aria-current="page">
+              <span class="page-link">
+                {{ i }}
+                <span class="sr-only">(current)</span>
+              </span>
+            </li>
+          {% else %}
+            <li class="page-item"><a class="page-link" href="?page={{ i }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">{{ i }}</a></li>
+          {% endif %}
+        {% endfor %}
+        {% if products.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ products.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">Next</a>
+          </li>
+        {% else %}
+          <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1" aria-disabled="True">Next</a>
+          </li>
+        {% endif %}
+      </ul>
+    </nav>
+  
 
 
+{% endblock %}
+
+{% block postloadjs %}
+
+    <script type="text/javascript">
+        $('#sort-selector').change(function() {
+            var selector = $(this);
+            var currentUrl = new URL(window.location);
+
+            var selectedVal = selector.val();
+            if(selectedVal != "reset"){
+                var sort = selectedVal.split("_")[0];
+                var direction = selectedVal.split("_")[1];
+
+                currentUrl.searchParams.set("sort", sort);
+                currentUrl.searchParams.set("direction", direction);
+
+                window.location.replace(currentUrl);
+            } else {
+                currentUrl.searchParams.delete("sort");
+                currentUrl.searchParams.delete("direction");
+
+                window.location.replace(currentUrl);
+            }
+        })
+    </script>
 {% endblock %}
