--- a/static/css/base.css
+++ b/static/css/base.css
@@ -110,7 +110,50 @@ color: white;
   height: 15%;
   }
 
+
+/* All products */
+
+.allproducts {
+    background-color: lightgray;
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
+
+.allproducts .card-image-top {
+    width: 100%;
+    height: 30vh;
+    object-fit: cover;
+  }
+
+.allproducts .card-content {
+  height: 20vh;
+}
+
+/* Related product */
+
+.related-product {
+  background-color: lightgreen;
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+
+.related-product .card-image-top {
+  width: 100%;
+  height: 20vh;
+  object-fit: cover;
+}
+
+.related-product .card-content {
+height: 20vh;
+}
+
+/* Pagination * /
+
+
 /* Media querys */
+
 
 @media only screen and (min-width: 768px) {
   .nav-search{
@@ -149,6 +192,10 @@ color: white;
         margin-right:10%;
       }
   
+  
+  .related-product {
+    margin-top: 10%;
+  }
     
   
 }
