Added bag and add product funcionality

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -114,7 +114,7 @@ color: white;
 /* All products */
 
 .allproducts {
-    background-color: lightgray;
+    background-color: grey;
     font-weight: bold;
     font-size: 1.2em;
 }
@@ -132,22 +132,7 @@ color: white;
 
 /* Related product */
 
-.related-product {
-  background-color: lightgreen;
-  font-weight: bold;
-  font-size: 1.2em;
-}
 
-
-.related-product .card-image-top {
-  width: 100%;
-  height: 20vh;
-  object-fit: cover;
-}
-
-.related-product .card-content {
-height: 20vh;
-}
 
 /* Pagination * /
 
