--- a/products/templates/products/product_id.html
+++ b/products/templates/products/product_id.html
@@ -35,17 +35,22 @@
             </select>
             <p>{{ product.description }}</p>
             <div>
-                <form class="form" action="{% url 'addtoshopcart' product.id %}" method="POST">
+                <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
-                    <div id="SelectedProduct">
-                        <h3 class="product-price">{{ product.price }}</h3>
-                        <div class="qty-input">
-                            <span class="text-uppercase">QTY: </span>
-                            <input class="input" name="quantity" type="number" value="1" min="1" max="{{ product.amount }}">
-                            <button type="submit" {% if product.amount < 1  %} disabled {% endif %} class="primary-btn add-to-cart">
-                                <i class="fa fa-shopping-cart"></i> Add to Cart
-                            </button>
+                    <div class="form-row">
+                        <div class="col-12">
+                            <p class="mt-3"><strong>Quantity:</strong></p>
+                            <div class="form-group w-50">
+                                <div class="input-group">
+                                    <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                </div>
+                            </div>
                         </div>
+
+                        <div class="col-12">
+                            <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                        </div>
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     </div>
                 </form>
             </div>
@@ -53,7 +58,7 @@
 
     </div>
 </div>
-<div class="row">
+<div class="row" style="margin-top: 10%;">
     {% for product in related_products %}
         <div class="col-lg-3">
             <div class="card related-product">
@@ -78,33 +83,4 @@
 {% endblock %}
 
 {% block postloadjs %}
-    {{ block.super }}
-    <script type="text/javascript">
-		$('.btt-link').click(function(e) {
-			window.scrollTo(0,0)
-		})
-	</script>
-    
-    <script type="text/javascript">
-        $('#sort-selector').change(function() {
-            var selector = $(this);
-            var currentUrl = new URL(window.location);
-
-            var selectedVal = selector.val();
-            if(selectedVal != "reset"){
-                var sort = selectedVal.split("_")[0];
-                var direction = selectedVal.split("_")[1];
-
-                currentUrl.searchParams.set("sort", sort);
-                currentUrl.searchParams.set("direction", direction);
-
-                window.location.replace(currentUrl);
-            } else {
-                currentUrl.searchParams.delete("sort");
-                currentUrl.searchParams.delete("direction");
-
-                window.location.replace(currentUrl);
-            }
-        })
-    </script>
 {% endblock %}
