--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,7 +17,7 @@
             <div class="col-lg-7 div-index ">
                 <h1 class="h1-section">Look to our products</h1>
                 <h1 class="h1-section">Start Buying now</h1>
-                <a href="{% url 'products' %}"><button class="btn1">Shop</button></a>
+                <a href="{% url 'view_bag' %}"><button class="btn1">Shop</button></a>
             </div>
         </div>
     </div>
