--- a/products/templates/products/product_id.html
+++ b/products/templates/products/product_id.html
@@ -37,20 +37,15 @@
             <div>
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
-                    <div class="form-row">
-                        <div class="col-12">
-                            <p class="mt-3"><strong>Quantity:</strong></p>
-                            <div class="form-group w-50">
-                                <div class="input-group">
-                                    <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
-                                </div>
-                            </div>
+                    <div id="SelectedProduct">
+                        <div class="qty-input">
+                            <span class="text-uppercase">QTY: </span>
+                            <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                            <button type="submit" {% if product.amount < 1  %} disabled {% endif %} class="primary-btn " value="Add to Bag">
+                                <i class="fa fa-shopping-cart"></i> Add to Cart
+                            </button>
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
-
-                        <div class="col-12">
-                            <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
-                        </div>
-                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     </div>
                 </form>
             </div>
