--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -44,11 +44,14 @@
                         <input name="quantity" type="number" min="0" max="999" class="form-control"
                             required="true" placeholder="NewQuantity">
                     </div>
-                    <button type="submit" class="btn btn-warning">
+                    <button type="submit" class="btn btn-success">
                         <span aria-hidden="true"></span>Amend</button>
                 </div>
 
             </form>
+
+            <a href="{% url 'remove_from_bag' item.id %}"
+                                        class="  btn btn-danger btn-sm">X</a>
             </td>
 
 
